--- a/1.流式布局/10.京东移动端页面/index.html
+++ b/1.流式布局/10.京东移动端页面/index.html
@@ -13,6 +13,42 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-    123
+    <!-- 顶部 -->
+    <div class="header">
+      <ul>
+        <li>
+          <img src="./images/close.png" alt="" />
+        </li>
+        <li><img src="./images/logo.png" alt="" /></li>
+        <li>打开京东APP，购物更轻松</li>
+        <li>立即打开</li>
+      </ul>
+    </div>
+    <!-- 搜索 -->
+    <div class="search-wrap">
+      <div class="search-btn"></div>
+      <div class="search">
+        <div class="jd-icon"></div>
+        <div class="glass"></div>
+      </div>
+      <div class="search-login">登录</div>
+    </div>
+
+    <div class="main-content">
+      <div class="slider">
+        <img src="upload/banner.dpg" alt="" />
+      </div>
+      <div class="brand">
+        <div>
+          <img src="upload/pic1.dpg" alt="" />
+        </div>
+        <div>
+          <img src="upload/pic2.dpg" alt="" />
+        </div>
+        <div>
+          <img src="upload/pic3.dpg" alt="" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
