--- a/1.流式布局/10.京东移动端页面/index.html
+++ b/1.流式布局/10.京东移动端页面/index.html
@@ -7,7 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0,user-scalable=no,maximum-scale=1.0,minimum-scale=1.0"
     />
-    <title>Document</title>
+    <title>多快好省，购物上京东</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <!-- 2.引入初始化样式和自定义样式 -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/index.css" />
@@ -36,18 +37,78 @@
 
     <div class="main-content">
       <div class="slider">
-        <img src="upload/banner.dpg" alt="" />
+        <a href="#">
+          <img src="upload/banner.dpg" alt="" />
+        </a>
       </div>
       <div class="brand">
         <div>
-          <img src="upload/pic1.dpg" alt="" />
+          <a href="#">
+            <img src="upload/pic1.dpg" alt="" />
+          </a>
         </div>
         <div>
-          <img src="upload/pic2.dpg" alt="" />
+          <a href="#">
+            <img src="upload/pic2.dpg" alt="" />
+          </a>
         </div>
         <div>
-          <img src="upload/pic3.dpg" alt="" />
+          <a href="#">
+            <img src="upload/pic3.dpg" alt="" />
+          </a>
         </div>
+      </div>
+      <!-- 导航栏 -->
+      <nav>
+        <a href="#">
+          <img src="./upload/nav1.webp" alt="" />
+          <p>京东超市</p>
+        </a>
+        <a href="#">
+          <img src="./upload/nav1.webp" alt="" />
+          <p>京东超市</p>
+        </a>
+        <a href="#">
+          <img src="./upload/nav1.webp" alt="" />
+          <p>京东超市</p>
+        </a>
+        <a href="#">
+          <img src="./upload/nav1.webp" alt="" />
+          <p>京东超市</p>
+        </a>
+        <a href="#">
+          <img src="./upload/nav1.webp" alt="" />
+          <p>京东超市</p>
+        </a>
+        <a href="#">
+          <img src="./upload/nav1.webp" alt="" />
+          <p>京东超市</p>
+        </a>
+        <a href="#">
+          <img src="./upload/nav1.webp" alt="" />
+          <p>京东超市</p>
+        </a>
+        <a href="#">
+          <img src="./upload/nav1.webp" alt="" />
+          <p>京东超市</p>
+        </a>
+        <a href="#">
+          <img src="./upload/nav1.webp" alt="" />
+          <p>京东超市</p>
+        </a>
+        <a href="#">
+          <img src="./upload/nav1.webp" alt="" />
+          <p>京东超市</p>
+        </a>
+      </nav>
+
+      <div class="news">
+        <a href="#">
+          <img src="./upload/news1.dpg" alt="" />
+        </a>
+        <a href="#">
+          <img src="./upload/news2.dpg" alt="" />
+        </a>
       </div>
     </div>
   </body>
