--- a/2.rem适配布局/01.rem单位.html
+++ b/2.rem适配布局/01.rem单位.html
@@ -28,7 +28,7 @@
         height: 2em; */
 
         /* 2.rem单位相对的是<html>标签字体的大小 */
-        /* 通过设置html标签元素的大小，然后将所有元素的大小单位都设置为rem,可以实现整个页面里面元素的大小跟随页面的大小而变化。 */
+        /* 通过设置html标签元素的大小，然后将所有元素的大小单位都设置为rem,可以实现整个页面里面元素的大小跟随html标签字体大小而变化。 */
         width: 5rem;
         height: 5rem;
         background-color: orange;
