--- a/3.响应式开发/5.bootstrap基本使用.html
+++ b/3.响应式开发/5.bootstrap基本使用.html
@@ -88,6 +88,7 @@
       <div class="row box4">
         <div class="col-md-4">
           <!-- 列里面嵌套列最好加上一个row -->
+          <!-- 注意：添加带有row的div的好处，可以消除父级元素自带的padding -->
           <div class="row">
             <div class="col-md-6">子元素1</div>
             <div class="col-md-6">子元素2</div>
