--- a/3.响应式开发/6.阿里百秀/index.html
+++ b/3.响应式开发/6.阿里百秀/index.html
@@ -14,7 +14,115 @@
   </head>
   <body>
     <div class="container">
-      <h1>你好，世界！</h1>
+      <header class="col-md-2">
+        <div class="logo">
+          <img src="./images/alibaixiu.png" alt="" class="hidden-xs" />
+          <span class="visible-xs">阿里百秀</span>
+        </div>
+        <div class="nav">
+          <ul>
+            <li>
+              <a href="#" class="glyphicon glyphicon-camera">生活馆</a>
+            </li>
+            <li>
+              <a href="#" class="glyphicon glyphicon-camera">生活馆</a>
+            </li>
+            <li>
+              <a href="#" class="glyphicon glyphicon-camera">生活馆</a>
+            </li>
+            <li>
+              <a href="#" class="glyphicon glyphicon-camera">生活馆</a>
+            </li>
+            <li>
+              <a href="#" class="glyphicon glyphicon-camera">生活馆</a>
+            </li>
+          </ul>
+        </div>
+      </header>
+      <article class="col-md-7">
+        <div class="news clearfix">
+          <ul>
+            <li>
+              <a href="#">
+                <img src="./images/zhaoyincheng.jfif" alt="" />
+                <p>赵寅成</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/zhaoyincheng.jfif" alt="" />
+                <p>赵寅成</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/zhaoyincheng.jfif" alt="" />
+                <p>赵寅成</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/zhaoyincheng.jfif" alt="" />
+                <p>赵寅成</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/zhaoyincheng.jfif" alt="" />
+                <p>赵寅成</p>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="publish">
+          <div class="row">
+            <div class="col-sm-9">123</div>
+            <div class="col-sm-3">
+              <img src="./images/zhaoyincheng.jfif" alt="" class="hidden-xs" />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-9">123</div>
+            <div class="col-sm-3">
+              <img src="./images/zhaoyincheng.jfif" alt="" class="hidden-xs" />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-9">123</div>
+            <div class="col-sm-3">
+              <img src="./images/zhaoyincheng.jfif" alt="" class="hidden-xs" />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-9">123</div>
+            <div class="col-sm-3">
+              <img src="./images/zhaoyincheng.jfif" alt="" class="hidden-xs" />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-9">123</div>
+            <div class="col-sm-3">
+              <img src="./images/zhaoyincheng.jfif" alt="" class="hidden-xs" />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-9">123</div>
+            <div class="col-sm-3">
+              <img src="./images/zhaoyincheng.jfif" alt="" class="hidden-xs" />
+            </div>
+          </div>
+        </div>
+      </article>
+      <aside class="col-md-3">
+        <a href="#" class="banner">
+          <img src="./images/zhaoyincheng.jfif" alt="" />
+        </a>
+        <a class="hot">
+          <span class="btn btn-primary">热搜</span>
+          <h4>欢迎加入赵寅成的俱乐部</h4>
+          <p>这里收录的了各种赵寅成的美照</p>
+        </a>
+      </aside>
     </div>
   </body>
 </html>
