--- a/4.flex伸缩布局/携程旅游/index.html
+++ b/4.flex伸缩布局/携程旅游/index.html
@@ -12,6 +12,64 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <div class="search-box"></div>
+    <div class="search-box">
+      <div class="search">搜索:目的地/酒店/景点/航班号</div>
+      <a href="#" class="user">我 的</a>
+    </div>
+    <div class="focus">
+      <img src="./images/focus.jpg" alt="" />
+    </div>
+    <ul class="local-nav">
+      <li>
+        <a href="#">
+          <span class="local-nav-img"></span>
+          <span>攻略·景点</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="local-nav-img"></span>
+          <span>攻略·景点</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="local-nav-img"></span>
+          <span>攻略·景点</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="local-nav-img"></span>
+          <span>攻略·景点</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="local-nav-img"></span>
+          <span>攻略·景点</span>
+        </a>
+      </li>
+    </ul>
+    <div class="nav">
+      <div class="nav-common1">
+        <a class="nav-items">酒店</a>
+        <a class="nav-items">民宿·客栈</a>
+        <a class="nav-items">特价·爆款</a>
+      </div>
+      <div class="nav-common2">
+        <a class="nav-items">机票</a>
+        <a class="nav-items">火车票</a>
+        <a class="nav-items">汽车·船票</a>
+        <a class="nav-items">专车·租车</a>
+      </div>
+      <div class="nav-common2">
+        <a class="nav-items">旅游</a>
+        <a class="nav-items">高铁游</a>
+        <a class="nav-items">邮轮游</a>
+        <a class="nav-items">定制游</a>
+      </div>
+    </div>
+    <div class="subnav-enntry"></div>
   </body>
 </html>
