--- a/2.flex伸缩布局/携程旅游/index.html
+++ b/2.flex伸缩布局/携程旅游/index.html
@@ -53,23 +53,39 @@
     </ul>
     <div class="nav">
       <div class="nav-common1">
-        <a class="nav-items">酒店</a>
-        <a class="nav-items">民宿·客栈</a>
-        <a class="nav-items">特价·爆款</a>
+        <a class="nav-items" href="#">酒店</a>
+        <a class="nav-items" href="#">民宿·客栈</a>
+        <a class="nav-items" href="#">
+          <span>特价·爆款</span>
+        </a>
       </div>
       <div class="nav-common2">
-        <a class="nav-items">机票</a>
-        <a class="nav-items">火车票</a>
-        <a class="nav-items">汽车·船票</a>
-        <a class="nav-items">专车·租车</a>
+        <a class="nav-items" href="#">机票</a>
+        <a class="nav-items" href="#">火车票</a>
+        <a class="nav-items" href="#">汽车·船票</a>
+        <a class="nav-items" href="#">专车·租车</a>
       </div>
       <div class="nav-common2">
-        <a class="nav-items">旅游</a>
-        <a class="nav-items">高铁游</a>
-        <a class="nav-items">邮轮游</a>
-        <a class="nav-items">定制游</a>
+        <a class="nav-items" href="#">旅游</a>
+        <a class="nav-items" href="#">高铁游</a>
+        <a class="nav-items" href="#">邮轮游</a>
+        <a class="nav-items" href="#">定制游</a>
       </div>
     </div>
-    <div class="subnav-enntry"></div>
+    <!-- <div class="subnav-enntry"></div> -->
+    <div class="activity">
+      <div class="activity-head">
+        <h3>热门活动</h3>
+        <a href="#">获取更多福利</a>
+      </div>
+      <div class="ad">
+        <a href="#">
+          <img src="./images/ad1.png" alt="" />
+        </a>
+        <a href="#">
+          <img src="./images/ad2.jpg" alt="" />
+        </a>
+      </div>
+    </div>
   </body>
 </html>
