--- a/1.流式布局/04.物理像素与物理像素比.html
+++ b/1.流式布局/04.物理像素与物理像素比.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- 物理像素即为分辨率。分辨率750*1334表示水平方向有750个物理像素点。
+        px是css的单位，物理像素是设备的单位。
         PC端，1px就是一个物理像素。
         iPhone8中1px相当于两个物理像素，375px相当于750个物理像素，刚好占满宽度。
 
